# appNote

./: .gitignore  Makefile  README.md  main.cpp
note_database/: Psy_notes.txt
src/: CMakeLists.txt  classNote.py  fcts.cpp  functions.py  main.cpp  main.py  menu.cpp  window.py
src/c++/: Note.cpp  Note.h  bindings.cpp  bindings.h  functions.cpp  functions.h
src/c++/old/: fcts.cpp  fcts.h  main.cpp  menu.h
src/python/: main.py
